--- a/Chat/Chat/appsettings.json
+++ b/Chat/Chat/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "!1V^pIh^5zvwSBX!pLGBh!pEarDrrmZe^t08A0AVF&4jvJj!v5"
+  },
   "ConnectionStrings": {
     "ChatDb": "Server=.\\SQLEXPRESS;Database=ChatDb;Trusted_Connection=True;"
   },
