feat: added exception middleware

--- a/Chat/Chat/Chat.Api.csproj
+++ b/Chat/Chat/Chat.Api.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Chat.Db\Chat.Db.csproj" />
+    <ProjectReference Include="..\Chat.Exceptions\Chat.Exceptions.csproj" />
     <ProjectReference Include="..\Chat.Message\Chat.Message.csproj" />
     <ProjectReference Include="..\UserService\Chat.User.csproj" />
   </ItemGroup>
