--- a/Chat/Chat/appsettings.json
+++ b/Chat/Chat/appsettings.json
@@ -3,7 +3,7 @@
     "Secret": "!1V^pIh^5zvwSBX!pLGBh!pEarDrrmZe^t08A0AVF&4jvJj!v5"
   },
   "ConnectionStrings": {
-    "ChatDb": "Server=.\\SQLEXPRESS;Database=ChatDb;Trusted_Connection=True;Connect Timeout=30;Pooling=true;",
+    "ChatDb": "Server=.\\SQLEXPRESS;Database=ChatDb;Trusted_Connection=True;",
     "ChatDbLocal": "Server=(LocalDb)\\MSSQLLocalDB;Database=ChatDb;Trusted_Connection=True;Connect Timeout=30;Pooling=true;"
   },
   "Logging": {
